--- a/plugins.conf
+++ b/plugins.conf
@@ -1,4 +1,9 @@
-[API]
+[COG]
 ip = 192.168.16.60
 port = 9000
 notification_route = network/nagios/notification/receive
+
+[API]
+ip = 192.168.17.17
+port = 9000
+nagios_settings_route = services/devices/nagios/settings/get
