--- a/plugins.conf
+++ b/plugins.conf
@@ -1,9 +1,9 @@
 [COG]
-ip = 192.168.16.60
-port = 9000
+ip = solutions.gawex.pl
+port = 80
 notification_route = network/nagios/notification/receive
 
 [API]
-ip = 192.168.17.17
-port = 9000
+ip = 192.168.17.21
+port = 80
 nagios_settings_route = services/devices/nagios/settings/get
