switch nagios settings url back to api-station

--- a/plugins.conf
+++ b/plugins.conf
@@ -1,5 +1,10 @@
 [COG]
 ip = solutions.gawex.pl
+#ip = localhost
 port = 80
+#port = 9000
 notification_route = network/nagios/notification/receive
-nagios_settings_route = network/nagios/settings/get
+[API]
+ip = 192.168.17.21
+port = 80
+nagios_settings_route = services/devices/nagios/settings/get
