--- a/plugins.conf
+++ b/plugins.conf
@@ -1,10 +1,8 @@
 [COG]
-ip = solutions.gawex.pl
-#ip = localhost
-port = 80
-#port = 9000
+ip = localhost
+port = 9000
 notification_route = network/nagios/notification/receive
 [API]
-ip = 192.168.17.21
-port = 80
+ip = localhost
+port = 9001
 nagios_settings_route = services/devices/nagios/settings/get
